--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "image-resizer",
-  "version": "1.7.4",
+  "version": "1.7.5",
   "description": "On-the-fly image resizing and optimization using node and sharp (libvips). Heroku ready!",
   "main": "index.js",
   "scripts": {
@@ -39,13 +39,13 @@
     "morgan": "^1.7.0",
     "request": "^2.81.0",
     "sharp": "^0.16.0",
-    "twit": "~1.1.15"
+    "twit": "~1.1.15",
+    "ejs": "~2.6.1",
   },
   "devDependencies": {
     "chai": "~1.9.0",
     "connect-livereload": "~0.3.2",
     "dotenv": "~0.2.8",
-    "ejs": "~1.0.0",
     "gulp": "^3.9.1",
     "gulp-bump": "^0.1.8",
     "gulp-jshint": "^2.0.4",
