--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "request": "^2.81.0",
     "sharp": "^0.16.0",
     "twit": "~1.1.15",
-    "ejs": "~2.6.1",
+    "ejs": "~2.6.1"
   },
   "devDependencies": {
     "chai": "~1.9.0",
